--- a/project-0/Retaurant_App/RestaurantBl/RestaurantBl.csproj
+++ b/project-0/Retaurant_App/RestaurantBl/RestaurantBl.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestaurantDl\RestaurantDl.csproj" />
+    <ProjectReference Include="..\RetaurantModel\RestaurantModel.csproj" />
+  </ItemGroup>
 </Project>
