--- a/project-0/Retaurant_App/RestaurantUi/RestaurantUi.csproj
+++ b/project-0/Retaurant_App/RestaurantUi/RestaurantUi.csproj
@@ -10,5 +10,14 @@
   <ItemGroup>
     <ProjectReference Include="..\RestaurantDl\RestaurantDl.csproj" />
     <ProjectReference Include="..\RetaurantModel\RestaurantModel.csproj" />
+    <ProjectReference Include="..\RestaurantBl\RestaurantBl.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Serilog" />
+    <None Remove="Serilog.Sinks.File" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 </Project>
