added auth uit test, create diff method for asking emailid and password for login

--- a/project-0/Retaurant_App/RestaurantTest/RestaurantTest.csproj
+++ b/project-0/Retaurant_App/RestaurantTest/RestaurantTest.csproj
@@ -31,5 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RetaurantModel\RestaurantModel.csproj" />
+    <ProjectReference Include="..\RestaurantBl\RestaurantBl.csproj" />
   </ItemGroup>
 </Project>
