--- a/project-0/Retaurant_App/RestaurantDl/RestaurantDl.csproj
+++ b/project-0/Retaurant_App/RestaurantDl/RestaurantDl.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="System.Data.SqlClient" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
 </Project>
