--- a/project-0/Retaurant_App/RestaurantDl/RestaurantDl.csproj
+++ b/project-0/Retaurant_App/RestaurantDl/RestaurantDl.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RetaurantModel\RestaurantModel.csproj" />
+  </ItemGroup>
 </Project>
