add connection string file in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Db-Connection-File
+Db-Connection-string-File
 # Created by https://www.toptal.com/developers/gitignore/api/csharp,visualstudio,visualstudiocode,dotnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp,visualstudio,visualstudiocode,dotnetcore
 
