--- a/project-0/Retaurant_App/RestaurantDl/RestaurantDl.csproj
+++ b/project-0/Retaurant_App/RestaurantDl/RestaurantDl.csproj
@@ -8,9 +8,10 @@
 
   <ItemGroup>
     <None Remove="System.Data.SqlClient" />
+    <None Remove="Microsoft.Data.SqlClient" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RetaurantModel\RestaurantModel.csproj" />
