made changes to make it run on azure

--- a/project-1/Retaurant_App/RestaurantApi/Dockerfile
+++ b/project-1/Retaurant_App/RestaurantApi/Dockerfile
@@ -1,15 +1,16 @@
-﻿#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
-#http
 EXPOSE 443
-#https
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["RestaurantApi/RestaurantApi.csproj", "RestaurantApi/"]
+COPY ["RestaurantDl/RestaurantDl.csproj", "RestaurantDl/"]
+COPY ["RetaurantModel/RestaurantModel.csproj", "RetaurantModel/"]
+COPY ["RestaurantBl/RestaurantBl.csproj", "RestaurantBl/"]
 RUN dotnet restore "RestaurantApi/RestaurantApi.csproj"
 COPY . .
 WORKDIR "/src/RestaurantApi"
