--- a/project-1/Retaurant_App/RestaurantApi/RestaurantApi.csproj
+++ b/project-1/Retaurant_App/RestaurantApi/RestaurantApi.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Docker.DotNet" Version="3.125.5" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
